<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>dk.ku.di.dms.vms</groupId>
  <artifactId>vms-runtime-java</artifactId>
  <packaging>pom</packaging>
  <version>1.0-SNAPSHOT</version>
  <description>A runtime for execution of virtual microservices written in Java</description>

  <modules>

    <!-- modb -->
    <module>modb</module>
    <module>modb-api</module>
    <module>modb-common</module>
    <module>modb-service</module>

    <!-- sdk -->
    <module>sdk-embed</module>
    <module>sdk-core</module>

    <!-- general -->
    <module>web_common</module>

    <!-- operations -->
    <module>coordinator</module>

    <!-- for tests -->
    <module>playground</module>
    <module>marketplace</module>
      <module>marketplace/order</module>
      <module>marketplace/payment</module>
      <module>marketplace/shipment</module>

  </modules>

  <name>vms-runtime-java</name>
  <url>https://rnlaigner.github.io/vms</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>18</java.version>
    <maven.compiler.source>18</maven.compiler.source>
    <maven.compiler.target>18</maven.compiler.target>

    <!-- dependency versions -->
    <junit.version>4.13.2</junit.version>
    <slf4j.version>1.7.32</slf4j.version>

    <!-- surefire plugin openjdk18 -->
    <argLine>--add-modules jdk.incubator.foreign --add-exports java.base/jdk.internal.misc=ALL-UNNAMED --add-opens java.base/jdk.internal.util=ALL-UNNAMED</argLine>

  </properties>

  <dependencies>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- Logging. Required by junit. TODO change by custom-built one -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
      <!--      <scope>compile</scope>-->
    </dependency>

  </dependencies>

  <build>
    <!-- https://stackoverflow.com/questions/37350273/maven-compiler-plugin-in-parent-pom -->
    <finalName>ParentPOMProj</finalName>

    <pluginManagement>
      <plugins>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.7.0</version>
          <configuration>
            <source>18</source>
            <target>18</target>
            <compilerArgs>
              <arg>--add-modules</arg>
              <arg>jdk.incubator.foreign</arg>
              <arg>--add-exports</arg>
              <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
              <arg>--add-opens</arg>
              <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
            </compilerArgs>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.2</version>
          <configuration>
            <systemPropertyVariables>
              <jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
            </systemPropertyVariables>
            <useSystemClassLoader>true</useSystemClassLoader>
            <useManifestOnlyJar>false</useManifestOnlyJar>
            <!-- https://github.com/junit-team/junit5/issues/1377 -->
            <excludes>
              <exclude/>
            </excludes>
            <includes>
              <include>dk.ku.di.dms.vms.modb.common.memory</include>
            </includes>
          </configuration>
        </plugin>

      </plugins>

    </pluginManagement>
  </build>

  <developers>
    <developer>
      <id>rodrigolaigner</id>
      <name>Rodigo Laigner</name>
      <url>https://github.com/rnlaigner</url>
      <email>rnl@di.ku.dk</email>
    </developer>
  </developers>

</project>